--- a/src/css/style.default.css
+++ b/src/css/style.default.css
@@ -37,6 +37,9 @@ section {
 .section-gray {
   background: #f4f4f4;
 }
+.section-withe {
+  background: #fff;
+}
 .italic {
   font-style: italic;
   font-family: "Georgia", "Times New Roman", Times, serif;
@@ -150,7 +153,7 @@ INTRO
 .intro.colour-background {
   background: #241f1f;
 }
-.intro.image-background {
+/*.intro.image-background {
   background: url('../img/startup-room.jpg') center center no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -170,6 +173,7 @@ INTRO
   filter: alpha(opacity=93);
   z-index: 2;
 }
+*/
 .intro a {
   color: #fff;
 }
@@ -1488,3 +1492,36 @@ font-size: 20px;
 }
 
 
+
+
+#myVideo{
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -100;
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+  background-size: cover; 
+}
+
+#logoFire{
+  width: 16%;
+  margin-top: 8%;
+}
+
+#logoTitle{
+  width: 50%;
+  margin-bottom: 15%;
+  margin-top: 5%;
+}
