--- a/src/css/style.default.css
+++ b/src/css/style.default.css
@@ -1494,7 +1494,7 @@ font-size: 20px;
 
 
 
-#myVideo{
+#introVideo{
   display: block;
   position: absolute;
   left: 0;
@@ -1515,6 +1515,84 @@ font-size: 20px;
   background-size: cover; 
 }
 
+#backLoader{
+  transition: all 2s linear;
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 4;
+  background-color: #5c402e;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: 1013npm;
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+  background-size: cover; 
+}
+#backLoaderImg{
+  margin-top: 20%;
+  width: 6%;
+}
+
+@media (max-width: 1400px) {
+  #backLoaderImg{
+    margin-top: 20%;
+    width: 10%;
+  }
+}
+
+@media (max-width: 600px) {
+  #backLoaderImg{
+    margin-top: 70%;
+    width: 15%;
+  }
+}
+
+
+.bg {
+  animation:slide 3s ease-in-out infinite alternate;
+  background-image: linear-gradient(-60deg, #ffb935 50%, #555 50%);
+  bottom:0;
+  left:-50%;
+  opacity:.4;
+  position:fixed;
+  right:-50%;
+  top:0;
+  z-index:5;
+}
+
+.bg2 {
+  animation-direction:alternate-reverse;
+  animation-duration:4s;
+}
+
+.bg3 {
+  animation-duration:5s;
+}
+
+.content {
+  transform:translate(-50%, -50%);
+}
+
+
+
+@keyframes slide {
+  0% {
+    transform:translateX(-25%);
+  }
+  100% {
+    transform:translateX(25%);
+  }
+}
+
 #logoFire{
   width: 16%;
   margin-top: 8%;
@@ -1524,4 +1602,37 @@ font-size: 20px;
   width: 50%;
   margin-bottom: 15%;
   margin-top: 5%;
+}
+
+@keyframes flickerAnimation {
+  0%   { opacity:1; }
+  50%  { opacity:0; }
+  100% { opacity:1; }
+}
+@-o-keyframes flickerAnimation{
+  0%   { opacity:1; }
+  50%  { opacity:0; }
+  100% { opacity:1; }
+}
+@-moz-keyframes flickerAnimation{
+  0%   { opacity:1; }
+  50%  { opacity:0; }
+  100% { opacity:1; }
+}
+@-webkit-keyframes flickerAnimation{
+  0%   { opacity:1; }
+  50%  { opacity:0; }
+  100% { opacity:1; }
+}
+.animate-flicker1 {
+   -webkit-animation: flickerAnimation 3s infinite;
+   -moz-animation: flickerAnimation 3s infinite;
+   -o-animation: flickerAnimation 3s infinite;
+    animation: flickerAnimation 3s infinite;
+}
+
+.backLoaderHide {
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.5s linear;
 }
