--- a/src/css/style.default.css
+++ b/src/css/style.default.css
@@ -119,6 +119,9 @@ INTRO
   .intro p {
     font-size: 18px;
   }
+  .typewrite{
+    font-size: 18px;
+  }
 }
 @media (max-width: 991px) {
   .intro h1 {
@@ -1597,12 +1600,12 @@ font-size: 20px;
 }
 
 #logoFire{
-  width: 16%;
+  width: 12%;
   margin-top: 8%;
 }
 
 #logoTitle{
-  width: 50%;
+  width: 35%;
   margin-bottom: 15%;
   margin-top: 5%;
 }
@@ -1903,6 +1906,7 @@ background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAIAAAAC6
   margin-right: 1%;
   margin-left: 0.5%;
 }
+
 
   
   
