--- a/src/css/style.default.css
+++ b/src/css/style.default.css
@@ -1907,6 +1907,110 @@ background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAIAAAAC6
   margin-left: 0.5%;
 }
 
+/*Business card*/
+
+/* The Modal (background) */
+.modalBc {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content-bc {
+  background-color: #fefefe;
+  margin: auto;
+  margin-top: 5%;
+  border: 1px solid #888;
+  width: 390px;
+}
+
+/* The Close Button */
+.close-bc {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close-bc:hover,
+.close-bc:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal-header-bc {
+  padding: 2px 16px;
+  background-color: #f2ba14;
+  color: white;
+}
+
+.modal-footer-bc {
+  padding: 2px 16px;
+  background-color: #f2ba14;
+  color: white;
+}
+
+.flip-box-bc {
+  background-color: transparent;
+  width: 300px;
+  margin: auto;
+  height: 200px;
+  border: 1px solid #fff;
+  perspective: 1000px;
+}
+
+.flip-box-inner-bc {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+.flip-box-bc:hover .flip-box-inner-bc {
+  transform: rotateY(180deg);
+}
+
+.flip-box-front-bc, .flip-box-back-bc {
+  position: absolute;
+  width: 320px;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-box-front-bc {
+  background-color: #bbb;
+  color: black;
+}
+
+.flip-box-back-bc {
+  background-color: #555;
+  color: white;
+  transform: rotateY(180deg);
+}
+
+.flip-box-bc-img{
+  width:100%;
+  height: 100%;
+}
 
   
-  
+#myBtnBc {
+  background-color: #f2ba14!important;
+  border-radius: 5px;
+  color: #000;
+  padding: 6px 18px;
+  border-color: #f2ba14;
+}  
